@@ -840,7 +840,7 @@ pm-kerosene-recipes=Kerosene processing
 pm-naptha-recipes=Naptha processing
 pm-petrol-recipes=Petrol processing
 pm-refinery-gases-recipes=Refinery gases processing
-pm-copper-fiberoptics=Copper wired fiberoptic cables
+pm-aluminium-fiberoptics=Aluminium-wired fiberoptics
 pm-diesel-fuel-canisters=Diesel fuel canisters
 pm-kerosene-fuel-canisters=Kerosene fuel canisters
 pm-petrol-fuel-canisters=Petrol fuel canisters
